--- a/html/semantics/tabular-data/the-tbody-element/insertRow.html
+++ b/html/semantics/tabular-data/the-tbody-element/insertRow.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTMLTableSectionElement Test: insertRow()</title>
+<title>HTMLTableSectionElement#insertRow</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
+
+<div id ="log"></div>
 
 <table>
   <tbody id="testBody">
@@ -16,16 +18,27 @@
 var tbody = document.getElementById("testBody");
 
 test(function () {
-  tbody.insertRow(-1);
+  trEle = tbody.insertRow(0);
+  assert_equals(tbody.rows[0], trEle);
   assert_equals(tbody.rows.length, 2);
-}, document.title);
+}, "HTMLTableSectionElement insertRow(0)");
+
+test(function () {
+  trEle = tbody.insertRow(-1);
+  assert_equals(tbody.rows[tbody.rows.length - 1], trEle);
+  assert_equals(tbody.rows.length, 3);
+}, "HTMLTableSectionElement insertRow(-1)");
 
 test(function () {
   assert_throws("IndexSizeError", function () {
     tbody.insertRow(-2);
   });
-}, "Check if HTMLTableSectionElement.insertRow must throw an IndexSizeError exception if index is less than −1 or greater than the number of elements in the rows collection");
+}, "HTMLTableSectionElement insertRow(-2)");
+
+test(function () {
+  assert_throws("IndexSizeError", function () {
+    tbody.insertRow(tbody.rows.length + 1);
+  });
+}, "HTMLTableSectionElement insertRow(rows.length + 1)");
 
 </script>
-
-<div id ="log"></div>
